disabled dark mode with small other changes

--- a/app/src/main/res/layout/activity_payment_test.xml
+++ b/app/src/main/res/layout/activity_payment_test.xml
@@ -36,156 +36,195 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/re1"
-        android:orientation="vertical"
-        android:id="@+id/li1">
+        android:layout_height="match_parent"
+        android:id="@+id/mainLayout"
+        android:visibility="gone"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/re1"
+            android:orientation="vertical"
+            android:id="@+id/li1">
 
-        <ImageView
-            android:id="@+id/success1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/ic_baseline_check_circle_outline_24" />
+            <ImageView
+                android:id="@+id/success1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:visibility="gone"
+                android:src="@drawable/ic_baseline_check_circle_outline_24" />
 
-        <ImageView
-            android:id="@+id/failure"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@id/success1"
+            <ImageView
+                android:id="@+id/failure"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_below="@id/success1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:src="@drawable/ic_baseline_cancel_24"
+                android:visibility="gone" />
+            <ImageView
+                android:id="@+id/pending"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_below="@id/success1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:src="@drawable/pending"
+                />
+        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/li1"
+            android:id="@+id/txMessage"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/ic_baseline_cancel_24"
-            android:visibility="gone" />
+            android:text="Transaction Pending"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/detailsLayout"
+            android:visibility="gone"
+            android:layout_below="@id/txMessage">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Order Id"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:id="@+id/orderId"
+                android:layout_marginStart="15dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/orderId"
+                android:layout_marginTop="4dp"
+                android:textColor="#2196F3"
+                android:layout_marginStart="15dp"
+                android:id="@+id/orderId1"
+                android:text=""/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/paymentMode"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_below="@id/orderId1"
+                android:text="Payment Mode"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/paymentMode"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="15dp"
+                android:id="@+id/paymentMode1"
+                android:textColor="#2196F3"
+                android:text=""/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/txTime"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_below="@id/paymentMode1"
+                android:text="Transaction Time"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txTime"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="15dp"
+                android:textColor="#2196F3"
+                android:id="@+id/txTime1"
+                android:text=""/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/refId"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_below="@id/txTime1"
+                android:text="Referrance Id"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/refId"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="15dp"
+                android:textColor="#2196F3"
+                android:id="@+id/refId1"
+                android:text=""/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/orderAmount"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_below="@id/refId1"
+                android:text="Order Amount"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/orderAmount"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="15dp"
+                android:textColor="#2196F3"
+                android:id="@+id/orderAmount1"
+                android:text=""/>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/txStatus"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_below="@id/detailsLayout"
+            android:text="Transaction Status"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txStatus"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="15dp"
+            android:textColor="#2196F3"
+            android:id="@+id/txStatus1"
+            android:text="pending"/>
+
     </RelativeLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/li1"
-        android:id="@+id/txMessage"
-        android:layout_centerHorizontal="true"
-        android:text="Transaction Message"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Order Id"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:id="@+id/orderId"
-        android:layout_marginStart="15dp"
-        android:layout_below="@id/txMessage"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/orderId"
-        android:layout_marginTop="4dp"
-        android:textColor="#2196F3"
-        android:layout_marginStart="15dp"
-        android:id="@+id/orderId1"
-        android:text="123456"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/paymentMode"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:layout_below="@id/orderId1"
-        android:text="Payment Mode"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/paymentMode"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="15dp"
-        android:id="@+id/paymentMode1"
-        android:textColor="#2196F3"
-        android:text="123456"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/txTime"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:layout_below="@id/paymentMode1"
-        android:text="Transaction Time"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txTime"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="15dp"
-        android:textColor="#2196F3"
-        android:id="@+id/txTime1"
-        android:text="123456"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/refId"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:layout_below="@id/txTime1"
-        android:text="Referrance Id"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/refId"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="15dp"
-        android:textColor="#2196F3"
-        android:id="@+id/refId1"
-        android:text="123456"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/orderAmount"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:layout_below="@id/refId1"
-        android:text="Order Amount"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/orderAmount"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="15dp"
-        android:textColor="#2196F3"
-        android:id="@+id/orderAmount1"
-        android:text="123456"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/txStatus"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:layout_below="@id/orderAmount1"
-        android:text="Transaction Status"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txStatus"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="15dp"
-        android:textColor="#2196F3"
-        android:id="@+id/txStatus1"
-        android:text="123456"/>
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/progress"
+        android:background="#B7000000"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
 
 
 </RelativeLayout>
