--- a/app/src/main/res/layout/for_my_bookings_list.xml
+++ b/app/src/main/res/layout/for_my_bookings_list.xml
@@ -11,14 +11,33 @@
         android:layout_height="wrap_content"
         android:id="@+id/re3"
         android:layout_margin="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Journey date :"
+            android:textStyle="bold"
+            android:textColor="@color/textColor"
+            android:textSize="16sp"
+            android:id="@+id/dateText"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/journey_date"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginStart="2dp"
+            android:layout_toEndOf="@+id/dateText"
+            android:text="25-01-2021" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="from"
             android:id="@+id/pickup"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
+            android:layout_below="@+id/dateText"
             android:textColor="@color/black" />
 
         <ImageView
@@ -27,6 +46,7 @@
             android:src="@drawable/right_arrow"
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@id/pickup"
+            android:layout_below="@id/journey_date"
             android:id="@+id/to" />
 
         <TextView
@@ -35,7 +55,8 @@
             android:text="to"
             android:id="@+id/drop"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
+            android:layout_below="@+id/dateText"
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@id/to"
             android:textColor="@color/black" />
@@ -46,7 +67,7 @@
             android:layout_below="@id/pickup"
             android:id="@+id/pickup_time"
             android:textStyle="bold"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:layout_marginTop="10dp"
             android:text="06:30AM" />
         <ImageView
@@ -59,7 +80,6 @@
             android:layout_below="@id/pickup"
             android:id="@+id/to1" />
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -67,37 +87,28 @@
             android:id="@+id/drop_time"
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@id/to1"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:text="07:30PM" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pickup_time"
-            android:id="@+id/journey_date"
-            android:layout_marginTop="10dp"
-            android:text="25-01-2021" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Travels"
             android:textSize="16sp"
             android:id="@+id/travels"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/journey_date"/>
+            android:layout_below="@id/drop_time"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
             android:id="@+id/status"
-            android:layout_marginStart="15dp"
             android:textColor="#0071cc"
-            android:layout_below="@id/drop"
-            android:layout_toEndOf="@id/drop_time"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:text="Completed"/>
     </RelativeLayout>
 
