--- a/app/src/main/res/layout/activity_add_account_details.xml
+++ b/app/src/main/res/layout/activity_add_account_details.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="name"
+        android:hint="Name"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_below="@id/re1"
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="email"
+        android:hint="Email"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_below="@id/e_name"
@@ -94,7 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="Bank Account"
+        android:hint="Bank Account Number"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_below="@id/e_phone"
@@ -132,7 +132,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="Vpa"
+        android:hint="VPA (Optional)"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_below="@id/e_ifsc"
@@ -176,4 +176,18 @@
         android:background="@drawable/background_gradiant"
         android:text="Submit"
         android:textColor="#fff" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/progress"
+        android:visibility="gone"
+        android:elevation="3dp"
+        android:background="#79000000"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+    />
+    </RelativeLayout>
 </RelativeLayout>
