--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -145,6 +145,40 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="COMISSION"
+                android:id="@+id/commision"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/total"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/li_commision"
+                android:layout_below="@id/li2_amount"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/commision_rupee"
+                    android:layout_width="20dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/rupee" />
+                <TextView
+                    android:id="@+id/commision_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="#0071cc"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
