--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -59,7 +59,7 @@
         android:layout_marginTop="80dp"
         android:layout_alignParentEnd="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/person"
+        android:src="@drawable/profile_pic"
         android:layout_marginEnd="25dp"
         android:elevation="2dp"
         app:civ_border_color="#fff"
