--- a/app/src/main/res/layout/activity_select_payment.xml
+++ b/app/src/main/res/layout/activity_select_payment.xml
@@ -28,7 +28,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:textColor="#fff"
-            android:text="Select Payment"
+            android:text="Select Payment Mode"
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
@@ -72,6 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:maxLength="16"
             android:imeOptions="actionNext"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -89,7 +90,7 @@
             android:id="@+id/e_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="text"
             android:imeOptions="actionNext"/>
     </com.google.android.material.textfield.TextInputLayout>
     <LinearLayout
@@ -114,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/e_month"
                 android:inputType="number"
+                android:maxLength="2"
                 android:imeOptions="actionNext"/>
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -132,6 +134,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:id="@+id/e_year"
+                android:maxLength="2"
                 android:imeOptions="actionNext"/>
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -150,10 +153,24 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:id="@+id/cvv"
+                android:maxLength="3"
                 android:imeOptions="actionNext"/>
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:id="@+id/cardSubmit"
+            android:background="@drawable/button_main"
+            android:layout_below="@+id/li1"
+            android:layout_margin="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
+            />
     </RelativeLayout>
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
