--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -138,7 +138,7 @@
         android:id="@+id/progress_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#83000000"
+        android:background="@color/progressBGColor"
         android:visibility="visible">
 
         <ProgressBar
