--- a/app/src/main/res/layout/activity_datacard_screen.xml
+++ b/app/src/main/res/layout/activity_datacard_screen.xml
@@ -127,7 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/progress"
-        android:background="#61000000"
+        android:background="@color/progressBGColor"
         android:visibility="gone"
         android:elevation="3dp"
 
