--- a/app/src/main/res/layout/activity_my_bookings.xml
+++ b/app/src/main/res/layout/activity_my_bookings.xml
@@ -33,11 +33,22 @@
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/re1"
+        android:id="@+id/filterLayout"
+        >
+
+
+
+
+    </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bookings_list__recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/re1"
+        android:layout_below="@id/filterLayout"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
