--- a/app/src/main/res/layout/activity_postpaid_screen.xml
+++ b/app/src/main/res/layout/activity_postpaid_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Postpaid_screen">
+    tools:context=".postpaid.Postpaid_screen">
     <RelativeLayout
         android:id="@+id/re1"
         android:layout_width="match_parent"
@@ -133,7 +133,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/progress"
-        android:background="#61000000"
+        android:background="@color/progressBGColor"
         android:visibility="gone"
         android:elevation="3dp"
         >
