--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#EA9210</color>
-    <color name="purple_700">#F4A632</color>
-    <color name="teal_200">#F4A632</color>
-    <color name="top_color">#FA1C0C</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#1D1F27</color>
+    <color name="textHeading">#252525</color>
     <color name="white">#FAFAFA</color>
-    <color name="colorlight">#FF8A65</color>
     <color name="gray">#9C9B9B</color>
     <color name="error">#B00020</color>
     <color name="gradientStart">#2193b0</color>
     <color name="gradientEnd">#6dd5ed</color>
     <color name="textColor">#0071cc</color>
+    <color name="progressBGColor">#BA000000</color>
 
 </resources>
