--- a/app/src/main/res/layout/activity_available_buses.xml
+++ b/app/src/main/res/layout/activity_available_buses.xml
@@ -76,11 +76,13 @@
             android:textSize="16sp"
             android:layout_weight="1"
             android:padding="5dp"
+            android:layout_margin="4dp"
             android:background="@drawable/button_bg"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:id="@+id/sort"
             android:text="Sort"
             android:drawableStart="@drawable/sort"
             android:drawablePadding="5dp"
@@ -89,6 +91,22 @@
             android:textSize="16sp"
             android:layout_weight="1"
             android:padding="5dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/button_bg"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Clear"
+            android:id="@+id/clearFilter"
+            android:drawableStart="@drawable/clear_filter"
+            android:drawablePadding="5dp"
+            android:gravity="start"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:layout_margin="4dp"
             android:background="@drawable/button_bg"
             />
 
