--- a/app/src/main/res/layout/activity_add_account_details.xml
+++ b/app/src/main/res/layout/activity_add_account_details.xml
@@ -167,13 +167,14 @@
     </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submit"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/background_gradiant"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/e_address"
+        android:background="@drawable/button_main"
         android:text="Submit"
         android:textColor="#fff" />
     <RelativeLayout
