--- a/app/src/main/res/layout/activity_datacard_screen.xml
+++ b/app/src/main/res/layout/activity_datacard_screen.xml
@@ -119,9 +119,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/datacard_items"
         android:layout_below="@+id/next"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="15dp"
+        android:clipToPadding="false"
+        android:padding="15dp"
         />
     <RelativeLayout
         android:layout_width="match_parent"
