--- a/app/src/main/res/layout/activity_dth_screen.xml
+++ b/app/src/main/res/layout/activity_dth_screen.xml
@@ -126,15 +126,15 @@
         android:background="@drawable/button_bg"
         android:text="Proceed"
         android:textColor="@color/gradientStart" />
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dth_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/dth_items"
         android:layout_below="@+id/next"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="15dp"
-        />
+        android:clipToPadding="false"
+        android:padding="15dp" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
