--- a/app/src/main/res/layout/activity_electricity_screen.xml
+++ b/app/src/main/res/layout/activity_electricity_screen.xml
@@ -121,9 +121,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/electricity_items"
         android:layout_below="@+id/next"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="15dp"
+        android:clipToPadding="false"
+        android:padding="15dp"
         />
 
     <RelativeLayout
