--- a/app/src/main/res/layout/activity_mobile.xml
+++ b/app/src/main/res/layout/activity_mobile.xml
@@ -147,9 +147,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/mobile_items"
         android:layout_below="@+id/next"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="15dp"
+        android:clipToPadding="false"
+        android:padding="15dp"
         />
 
 
