--- a/app/src/main/res/layout/activity_view_more.xml
+++ b/app/src/main/res/layout/activity_view_more.xml
@@ -62,15 +62,15 @@
                 android:textColor="#000"
                 android:textStyle="bold" />
 
-
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_more"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/t1"
-                android:layout_marginStart="15dp"
-                android:layout_marginBottom="8dp" />
+                android:clipToPadding="false"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="8dp" />
         </RelativeLayout>
     </RelativeLayout>
 
