--- a/app/src/main/res/layout/for_buses_list_recycler.xml
+++ b/app/src/main/res/layout/for_buses_list_recycler.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground">
-    <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:layout_margin="10dp"
-        android:elevation="6dp"
-        app:cardCornerRadius="3dp">
+        app:cardElevation="18dp"
+        android:layout_margin="7dp"
 
+        >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -135,5 +129,3 @@
                 android:layout_toEndOf="@id/bus_type"/>
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
-
-</RelativeLayout>
