--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -143,7 +143,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/progressBGColor"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ProgressBar
             android:layout_width="wrap_content"
