--- a/app/src/main/res/layout/activity_bus_seating.xml
+++ b/app/src/main/res/layout/activity_bus_seating.xml
@@ -77,7 +77,7 @@
                     android:layout_gravity="center"
                     android:id="@+id/selectIndex"
                     android:layout_marginTop="10dp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:padding="0dp"
                     android:background="@drawable/border"
                     android:gravity="center">
